# yew-parcel-starter

./: .gitignore  Cargo.toml  bootstrap.js  package.json  readme.md
src/: app.rs  lib.rs
static/: fun.js  index.html  index.ts
