[package]
name = "yew-parcel-starter"
version = "0.1.0"
authors = ["还不如一只猪威武 <liamxin@yeah.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
yew = "0.17.3"
yew-router = { version="0.14.0", features = ["web_sys"] }
wasm-bindgen = "0.2.64"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.14"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]